<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>il.org.spartan</groupId>
	<artifactId>fluent.ly.5</artifactId>
	<version>0.0.1</version>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.eclipse.jdt</groupId>
			<artifactId>org.eclipse.jdt.annotation</artifactId>
			<version>2.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-all</artifactId>
			<version>1.3</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
		</dependency>
		<dependency>
			<groupId>org.jetbrains</groupId>
			<artifactId>annotations</artifactId>
			<version>RELEASE</version>
		</dependency>
		<dependency>
			<groupId>il.org.spartan</groupId>
			<artifactId>spartan</artifactId>
			<version>1.3</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/lib/spartan-1.4.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>il.org.spartan</groupId>
			<artifactId>cli</artifactId>
			<version>1.01</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/lib/cli-1.01.jar</systemPath>
		</dependency>
	</dependencies>
</project>